@@ -20,11 +20,12 @@
 #define IPV4_ROUTE_H
 
 #include <list>
-#include <vector>
+#include <map>
 #include <ostream>
 
 #include "ns3/simple-ref-count.h"
 #include "ns3/ipv4-address.h"
+#include "ns3/deprecated.h"
 
 namespace ns3 {
 
@@ -145,7 +146,12 @@ public:
    * \param oif outgoing interface
    * \return TTL for this route
    */
-  uint32_t GetOutputTtl (uint32_t oif) const;
+  uint32_t GetOutputTtl (uint32_t oif) NS_DEPRECATED;
+
+  /**
+   * \return map of output interface Ids and TTLs for this route
+   */
+  std::map<uint32_t, uint32_t> GetOutputTtlMap() const;
   
   static const uint32_t MAX_INTERFACES = 16;  // Maximum number of multicast interfaces on a router
   static const uint32_t MAX_TTL = 255;  // Maximum time-to-live (TTL)
@@ -154,7 +160,7 @@ private:
   Ipv4Address m_group;      // Group 
   Ipv4Address m_origin;     // Source of packet
   uint32_t m_parent;        // Source interface
-  std::vector<uint32_t> m_ttls;
+  std::map<uint32_t, uint32_t> m_ttls;
 };
 
 }//namespace ns3
